Organizacion de carpeta y creacion de login para el invetario

--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   
+    <div class="img">
+        
+    </div>
+    <div class="cuadro">
+        <form action="" id="formulario" class="formulario">
+            <h2>INVETARIO</h2>
+            <div class="grupo-input">
+                <span class="icon-user"></span>
+                <input type="text" id="usuario" class="usuario" placeholder="Usuario">
+            </div>
+            <div class="grupo-input">
+                <span class="icon-key"></span>
+                <input type="password" id="contraseña" class="usuario" placeholder="Contraseña">
+            </div>
+            <a href="#" class="registro" id="registro">Crear nuevo usuario</a>
+            <div class="botones">
+                <button type="submit" id="enviar" class="enviar bloqueo"><span class="icon-lock"></span></button>
+            </div>
+           </form>
+    </div>
 
     <script src="javascript.js"></script>
 </body>
