--- a/index.html
+++ b/index.html
@@ -4,17 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Invetario</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="img">
-        
+    <div class="cuadro-registro" id="cuadro-registro">
+        <form onsubmit="event.preventDefault();" action="" id="formulario-registro" class="formulario-registro">
+            <h2 class="titulo-registro">Registro de usuario</h2>
+            <div class="grupo-input">
+                <input type="text" id="registro-usuario" class="usuario" placeholder="Nombre de usuario">
+            </div>
+            <div class="grupo-input">
+                <input type="password" id="registro-contraseña" class="usuario" placeholder="Contraseña">
+            </div>
+            <div class="grupo-input">
+                <input type="password" id="repetir-contraseña" class="usuario" placeholder="Repita contraseña">
+            </div>
+            <buttom class="volver" id="volver">Volver</buttom>
+            <div class="botones">
+                <button type="submit" id="registrar" class="registrar bloqueo">Registrar</button>
+            </div>
+        </form>
     </div>
     <div class="cuadro">
-        <form action="" id="formulario" class="formulario">
-            <h2>INVETARIO</h2>
+        <form onsubmit="event.preventDefault();" action="" id="formulario" class="formulario">
+            <h2 class="titulo-login">INVENTARIO</h2>
             <div class="grupo-input">
                 <span class="icon-user"></span>
                 <input type="text" id="usuario" class="usuario" placeholder="Usuario">
@@ -23,13 +38,13 @@
                 <span class="icon-key"></span>
                 <input type="password" id="contraseña" class="usuario" placeholder="Contraseña">
             </div>
-            <a href="#" class="registro" id="registro">Crear nuevo usuario</a>
+            <buttom class="registro" id="registro">Crear nuevo usuario</buttom>
             <div class="botones">
-                <button type="submit" id="enviar" class="enviar bloqueo"><span class="icon-lock"></span></button>
+                <button type="submit" id="enviar" class="enviar">Iniciar sesion</button>
             </div>
            </form>
     </div>
 
-    <script src="javascript.js"></script>
+    <script src="inicio-login.js"></script>
 </body>
 </html>
