--- a/main.html
+++ b/main.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>soporte</h1>
+    <button id="crear-elemento">Crear Elemento</button>
+<div id="contenedor"></div>
 
-    <script src="javascript.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
