--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="cuadro-registro" id="cuadro-registro">
+        <h2 class="mensaje-dos" id="mensaje-dos"></h2>
         <form onsubmit="event.preventDefault();" action="" id="formulario-registro" class="formulario-registro">
             <h2 class="titulo-registro">Registro de usuario</h2>
             <div class="grupo-input">
@@ -27,7 +28,9 @@
             </div>
         </form>
     </div>
+
     <div class="cuadro">
+        <h2 class="mensaje" id="mensaje"></h2>
         <form onsubmit="event.preventDefault();" action="" id="formulario" class="formulario">
             <h2 class="titulo-login">INVENTARIO</h2>
             <div class="grupo-input">
