--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invetario</title>
+    <title>Inventario</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.min.css" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
     <div class="cuadro-registro" id="cuadro-registro">
         <h2 class="mensaje-dos" id="mensaje-dos"></h2>
-        <form onsubmit="event.preventDefault();" action="" id="formulario-registro" class="formulario-registro">
+        <form action="" id="formulario-registro" class="formulario-registro">
             <h2 class="titulo-registro">Registro de usuario</h2>
             <div class="grupo-input">
                 <input type="text" id="registro-usuario" class="usuario" placeholder="Nombre de usuario">
@@ -30,10 +30,9 @@
             </div>
         </form>
     </div>
-
     <div class="cuadro">
         <h2 class="mensaje" id="mensaje"></h2>
-        <form onsubmit="event.preventDefault();" action="" id="formulario" class="formulario">
+        <form  action="" id="formulario" class="formulario">
             <h2 class="titulo-login">INVENTARIO</h2>
             <div class="grupo-input">
                 <span class="icon-user"></span>
@@ -49,7 +48,6 @@
             </div>
            </form>
     </div>
-
     <script src="inicio-login.js"></script>
 </body>
 </html>
