--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="cuadro-registro" id="cuadro-registro">
         <h2 class="mensaje-dos" id="mensaje-dos"></h2>
-        <form action="" id="formulario-registro" class="formulario-registro">
+        <form  id="formulario-registro" class="formulario-registro">
             <h2 class="titulo-registro">Registro de usuario</h2>
             <div class="grupo-input">
                 <input type="text" id="registro-usuario" class="usuario" placeholder="Nombre de usuario">
@@ -32,7 +32,7 @@
     </div>
     <div class="cuadro">
         <h2 class="mensaje" id="mensaje"></h2>
-        <form  action="" id="formulario" class="formulario">
+        <form  id="formulario" class="formulario">
             <h2 class="titulo-login">INVENTARIO</h2>
             <div class="grupo-input">
                 <span class="icon-user"></span>
