--- a/main.html
+++ b/main.html
@@ -20,14 +20,14 @@
             </ul>
         </nav>
     </header>
-    <form id="formulario-item" class="formulario-item">
+    <!-- <form id="formulario-item" class="formulario-item">
         <h2 class="titulo-formulario">Registro de item</h2>
         <input type="text" id="nombre-item" class="nombre-item" placeholder="Nombre del item" name="nombre-item" required>
         <input type="number" id="precio-item" class="precio-item" placeholder="Precio del item" name="precio-item" required>
         <input type="number" id="cantidad-item" class="cantidad-item" placeholder="Cantidad del item" name="cantidad-item" required>
         <input type="submit" class="guardar" id="guardar" value="Guardar">
         <button type="button"class="cerrar" id="cerrar">Cerrar</button>
-    </form>
+    </form> -->
     <h2 class="numero-item">Items en inventario: <span id="numero-item"></span></h2>
     <div class="contenedor">
         <main class="main" id="contenedor-items">
